force-app/main/default/objects/VIQ_Authentication_Connection__c/VIQ_Authentication_Connection__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To store the Zilliant URL and the connected app credentials</description>
    <label>VIQ Authentication Connection</label>
</CustomObject>