force-app/main/default/objects/VIQ_Authentication_Connection__c/fields/App_Consumer_Key__c.field-meta.xml
<CustomField>
    <fullName>App_Consumer_Key__c</fullName>
    <description>For connecting to the zilliant database when we change between environments</description>
    <inlineHelpText>Consumer Key of the ZilliantOauth Connected App</inlineHelpText>
    <label>App Consumer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>