force-app/main/default/objects/VIQ_Authentication_Connection__c/fields/App_Consumer_Secret__c.field-meta.xml
<CustomField>
    <fullName>App_Consumer_Secret__c</fullName>
    <description>Needed for authenticating to Zilliant and needs to be populated when we change between sandboxes</description>
    <inlineHelpText>Consumer Secret from the ZilliantOauth Connected App</inlineHelpText>
    <label>App Consumer Secret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>