force-app/main/default/objects/VIQ_Authentication_Connection__c/fields/Zilliant_URL__c.field-meta.xml
<CustomField>
    <fullName>Zilliant_URL__c</fullName>
    <description>Must enter the URL that we are pointing to so that we are able to deploy between environments</description>
    <inlineHelpText>The URL we are pointing at</inlineHelpText>
    <label>Zilliant URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>